--- a/model/estandares.html
+++ b/model/estandares.html
@@ -148,8 +148,7 @@
 <nav>
     <a href="../index.html">Inicio</a>
     <a href="eticos_legales.html">Aspectos Éticos y Legales</a>
-    <a href="proteccion_datos.html">Protección de Datos</a>
-    <a href="estandares.html">Estándares</a>
+    <a href="estandares.html">Estándares de Información</a>
 </nav>
 
 <div class="container">
