--- a/model/eticos_legales.html
+++ b/model/eticos_legales.html
@@ -163,25 +163,25 @@
         <div class="card">
             <h3>Ley General de Protección de Datos Personales de México</h3>
             <p>Esta ley establece las bases y requisitos para el manejo de datos personales en México, protegiendo los derechos de las personas y asegurando que las empresas cumplan con estrictas normativas en cuanto a la recolección, almacenamiento y tratamiento de dicha información.</p>
-            <a href="https://www.gob.mx/inaip/articulos/ley-general-de-proteccion-de-datos-personales" target="_blank">Ver más</a>
+            <a href="https://www.diputados.gob.mx/LeyesBiblio/pdf/LGPDPPSO.pdf" target="_blank">Ver más</a>
         </div>
 
         <div class="card">
             <h3>Ley de Propiedad Industrial</h3>
             <p>La Ley de Propiedad Industrial protege las creaciones e innovaciones de los inventores y empresas en México. Define los mecanismos legales para registrar y proteger patentes, marcas y otros derechos relacionados con la propiedad industrial.</p>
-            <a href="https://www.gob.mx/impi" target="_blank">Ver más</a>
+            <a href="https://www.diputados.gob.mx/LeyesBiblio/pdf/LFPPI.pdf" target="_blank">Ver más</a>
         </div>
 
         <div class="card">
             <h3>Ley Federal de Derechos de Autor</h3>
             <p>Este marco jurídico regula y protege los derechos de los creadores de obras literarias, musicales, audiovisuales y otros tipos de contenido. Garantiza que los autores reciban el reconocimiento y la compensación adecuada por el uso de sus obras.</p>
-            <a href="https://www.indautor.gob.mx" target="_blank">Ver más</a>
+            <a href="https://www.diputados.gob.mx/LeyesBiblio/pdf/LFDA.pdf" target="_blank">Ver más</a>
         </div>
 
         <div class="card">
             <h3>Código Penal Federal</h3>
             <p>El Código Penal Federal de México regula las sanciones por violaciones a la ley, incluyendo delitos relacionados con la información, como la difusión de datos personales sin autorización o el uso indebido de información confidencial.</p>
-            <a href="https://www.gob.mx/cms/uploads/attachment/file/602053/Codigo_Penal_Federal.pdf" target="_blank">Ver más</a>
+            <a href="https://www.diputados.gob.mx/LeyesBiblio/pdf/CPF.pdf" target="_blank">Ver más</a>
         </div>
     </div>
 
