--- a/model/estandares.html
+++ b/model/estandares.html
@@ -10,12 +10,14 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
             color: #333;
+            background-image: url('fond.jpg'); 
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed; 
         }
-
         header {
-            background-color: #0288d1;
+            background-color: #032436;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -24,7 +26,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #0277bd;
+            background-color: #113e58;
         }
 
         nav a {
@@ -43,10 +45,13 @@
             max-width: 1200px;
             margin: 20px auto;
             padding: 20px;
+            background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco con opacidad para contraste */
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         footer {
-            background-color: #0277bd;
+            background-color: #032436;
             color: #fff;
             text-align: center;
             padding: 10px 0;
@@ -55,11 +60,11 @@
         }
 
         h2 {
-            color: #01579b;
+            color: #113e58;
             text-align: center;
             margin-bottom: 40px;
             padding: 10px;
-            background: linear-gradient(90deg, #0288d1 0%, #0277bd 50%, #01579b 100%);
+            background: linear-gradient(90deg, #6b8796 0%, #34454e 50%, #394d5c 100%);
             color: white;
             border-radius: 8px;
         }
@@ -102,7 +107,7 @@
         }
 
         .card h3 {
-            color: #01579b;
+            color: #113e58;
             text-align: center;
             margin-bottom: 10px;
             font-size: 1.5em;
@@ -119,7 +124,7 @@
             text-align: center;
             text-decoration: none;
             color: #fff;
-            background-color: #0288d1;
+            background-color: #113e58;
             padding: 10px;
             border-radius: 5px;
             font-weight: bold;
@@ -131,7 +136,6 @@
             background-color: #01579b;
         }
 
-        /* Estilo para las tarjetas en grupo */
         .cards-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -195,6 +199,7 @@
 
 <footer>
     <p>&copy; 2024 Normateca Digital. Todos los derechos reservados.</p>
+    <p><a href="Aviso de privacidad integral.pdf">Aviso de Privacidad</a></p>
 </footer>
 
 <button id="go-top" onclick="scrollToTop()">⬆</button>
