--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 <footer>
     <p>&copy; 2024 Normateca Digital. Todos los derechos reservados.</p>
-    <p><a href="model/Aviso de privacidad integral.pdf">Aviso de Privacidad</a></p>
+    <p><a href="model/Aviso de privacidad integral.pdf" target="_blank">Aviso de Privacidad</a></p>
 </footer>
 
 <button id="go-top" onclick="scrollToTop()">⬆</button>
