--- a/model/eticos_legales.html
+++ b/model/eticos_legales.html
@@ -196,7 +196,7 @@
 
 <footer>
     <p>&copy; 2024 Normateca Digital. Todos los derechos reservados.</p>
-    <p><a href="Aviso de privacidad integral.pdf">Aviso de Privacidad</a></p>
+    <p><a href="Aviso de privacidad integral.pdf" target="_blank">Aviso de Privacidad</a></p>
 </footer>
 
 <button id="go-top" onclick="scrollToTop()">⬆</button>
